--- a/src/components/CartDropdown/cart-dropdown.scss
+++ b/src/components/CartDropdown/cart-dropdown.scss
@@ -15,7 +15,18 @@
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow-y: auto;
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
+
+    &::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: darkgrey;
+    }
   }
 
   button {
